--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Despacho Fong Correa, Tijuana&amp;t=m&amp;z=15&amp;iwloc=A"></a>
             </small>
         </iframe>
-        <div class="row">
+        <div class="container">
             <div class="col-lg-10 col-lg-offset-1 text-center">
                 <h3><strong>Despacho Fong Correa</strong></h3>
                 <h4>Bvd. Agua Caliente #10535, Tijuana, BC, México</h4>
